# ios-a12-bypass

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  QUICKSTART.md  README.md
New_Extract_GUID/: README.md
include/iCloudBypassA12/bypass/: bypass_controller.hpp  config.hpp
include/iCloudBypassA12/core/: error.hpp  logger.hpp  raii.hpp  result.hpp  types.hpp
include/iCloudBypassA12/device/: afc_client.hpp  device_manager.hpp  diagnostics_client.hpp  syslog_client.hpp
include/iCloudBypassA12/payload/: epub_builder.hpp  payload_generator.hpp  sqlite_builder.hpp
include/iCloudBypassA12/utils/: guid_extractor.hpp  plist_utils.hpp
resources/: ADDING_DEVICES.md
src/: main.cpp
src/bypass/: bypass_controller.cpp
src/core/: error.cpp  logger.cpp
src/device/: afc_client.cpp  device_manager.cpp  diagnostics_client.cpp  syslog_client.cpp
src/payload/: epub_builder.cpp  payload_generator.cpp  sqlite_builder.cpp
src/utils/: guid_extractor.cpp  plist_utils.cpp
tests/: test_core.cpp  test_main.cpp  test_payload.cpp  test_utils.cpp
